# Qameleon

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  local-qt6.cmake  variables.cmake
example/: CMakeLists.txt
include/Qameleon/: Qameleon.hpp
source/: Qameleon.cpp
test/: CMakeLists.txt
test/source/: Qameleon_test.cpp
